Fix nav-profile z-index

--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -821,7 +821,7 @@ header
 	right: 10px
 	border-top: 1px solid $color-default
 	background-color: #f7f7f7
-	z-index: 75
+	z-index: 101
 
 .navigation
 	z-index: 100 !important
